force-app/main/default/objects/Staff_Levels__c/Staff_Levels__c.object-meta.xml
<CustomObject>
    <description>Staff Levels are used to set the staff levels required to meet Essential services needs and Full services needs. The Essential and Full levels are used to define the thresholds in the dashboards to determine staffing needs</description>
    <label>Staff Levels</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Staff Level Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>