force-app/main/default/objects/Staff_Levels__c/fields/Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility__c</fullName>
    <description>Facility related to the Essential Needs and Full Complement thresholds</description>
    <inlineHelpText>Facility related to the Essential Needs and Full Complement thresholds</inlineHelpText>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staff Levels</relationshipLabel>
    <relationshipName>Staff_Level</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>