force-app/main/default/objects/Staff_Levels__c/fields/Current_Staff__c.field-meta.xml
<CustomField>
    <fullName>Current_Staff__c</fullName>
    <description>Automatically calculated based on Staff Availability</description>
    <label>Current Staff</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>