force-app/main/default/objects/Staff_Levels__c/fields/Essential_Staff__c.field-meta.xml
<CustomField>
    <fullName>Essential_Staff__c</fullName>
    <description>Number of staff required to provide essential services</description>
    <inlineHelpText>Number of staff required to provide essential services</inlineHelpText>
    <label>Essential Needs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>