force-app/main/default/objects/Staff_Levels__c/fields/Essential_Staff_Gap__c.field-meta.xml
<CustomField>
    <fullName>Essential_Staff_Gap__c</fullName>
    <formula>IF (( Essential_Staff__c  -  Current_Staff__c ) &lt; 0, 0, ( Essential_Staff__c  -  Current_Staff__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential Staff Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>