force-app/main/default/objects/Staff_Levels__c/fields/Extra_Staff__c.field-meta.xml
<CustomField>
    <fullName>Extra_Staff__c</fullName>
    <formula>IF (( Full_Staff_Gap__c  -  Current_Staff__c ) &gt; 0, 0 ,( Current_Staff__c  -  Full_Staff_Gap__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>