force-app/main/default/objects/Staff_Levels__c/fields/Full_Staff__c.field-meta.xml
<CustomField>
    <fullName>Full_Staff__c</fullName>
    <description>Number of staff required to provide full services</description>
    <inlineHelpText>Number of staff required to provide full services</inlineHelpText>
    <label>Full Complement</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>