force-app/main/default/objects/Staff_Levels__c/fields/Full_Staff_Gap__c.field-meta.xml
<CustomField>
    <fullName>Full_Staff_Gap__c</fullName>
    <formula>IF (( Full_Staff__c  -  Current_Staff__c ) &lt; 0, 0, (Full_Staff__c - Current_Staff__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Staff Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>