force-app/main/default/objects/Staff_Levels__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The type of role required for the essential and full services</description>
    <inlineHelpText>The type of role required for the essential and full services</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role</valueSetName>
    </valueSet>
</CustomField>