force-app/main/default/objects/Staff_Levels__c/fields/Total_COVID__c.field-meta.xml
<CustomField>
    <fullName>Total_COVID__c</fullName>
    <label>Total COVID+</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>