force-app/main/default/objects/Staff_Levels__c/fields/Total_Isolation__c.field-meta.xml
<CustomField>
    <fullName>Total_Isolation__c</fullName>
    <label>Total Isolation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>